--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<div class="flex-spacer"></div>
 <form id="search-form" [formGroup]="searchForm" (ngSubmit)="onSubmit()">
     <mat-form-field class="search-bar" appearance="outline">
         <mat-label>Search Player</mat-label>
@@ -7,3 +8,4 @@
         </button>
     </mat-form-field>
 </form>
+<div class="flex-spacer"></div>
