Fixed live match
- Fixed home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,15 @@
-<div class="flex-spacer"></div>
-<form id="search-form" [formGroup]="searchForm" (ngSubmit)="onSubmit()">
-    <mat-form-field class="search-bar" appearance="outline">
-        <mat-label>Search Player</mat-label>
-        <input matInput type="text" placeholder="DryBare" name="player" formControlName="playerName">
-        <button mat-button matSuffix mat-icon-button>
-            <mat-icon>search</mat-icon>
-        </button>
-    </mat-form-field>
-</form>
-<div class="flex-spacer"></div>
+<div class="content">
+    <div class="flex-spacer"></div>
+    <div class="inner">
+        <form id="search-form" [formGroup]="searchForm" (ngSubmit)="onSubmit()">
+            <mat-form-field class="search-bar" appearance="outline">
+                <mat-label>Search Player</mat-label>
+                <input matInput type="text" placeholder="DryBare" name="player" formControlName="playerName">
+                <button mat-button matSuffix mat-icon-button>
+                    <mat-icon>search</mat-icon>
+                </button>
+            </mat-form-field>
+        </form>
+    </div>
+    <div class="flex-spacer"></div>
+</div>
