--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -197,6 +197,8 @@
 
                 font-family: 'Righteous', sans-serif;
                 font-size: 1.5em;
+                
+                padding: 0 0 1em 1em;
             }
 
             > .teams {
