--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -192,13 +192,17 @@
             display: flex;
             flex-direction: column;
 
+            &:not(:first-child) {
+                padding-top: 0.75em;
+            }
+
             > .title {
                 flex: 0 0 auto;
 
                 font-family: 'Righteous', sans-serif;
                 font-size: 1.5em;
                 
-                padding: 0 0 1em 0.5em;
+                padding: 0 0 0.5em 0.5em;
             }
 
             > .teams {
@@ -243,6 +247,8 @@
                         border: 3px white solid;
                         border-radius: 0.5em;
                         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+
+                        text-align: center;
 
                         > .avatar {
                             max-height: 96px;
